--- a/style.css
+++ b/style.css
@@ -2,5 +2,91 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: linear-gradient(90deg,#e2e2e2,#c9d6ff);
+}
+
+.container{
+  position: relative;
+  width: 850px;
+  height: 550px;
+  background-color: #fff;
+  border-radius: 30px;
+  box-shadow: 0 0 30px rgba(0,0,0,0.2);
+}
+
+.form-box{
+  position: absolute;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  text-align: center;
+  align-items: center; 
+  background-color: seagreen;
+  color: #333;
+}
+form{
+width: 100%;
+}
+.container h1{
+  font-size: 36px;
+}
+
+.input-box{
+position: relative;
+margin: 30px 0;
+}
+
+.input-box input{
+  width: 100%;
+  padding: 13px 50px 13px 20px;
+  background: #eee;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  color: #333;
+  font-weight: 500;
+}
+
+.input-box input::placeholder{
+  color: #888;
+  font-weight: 400;
+}
+
+.input-box i{
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+  color: #888;
+}
+
+.forgot-link{
+  margin: -15px 0 15px;
+}
+.forgot-link a{
+font-size: 14.5px;
+color: #333;
+text-decoration: none;
+}
+
+.btn{
+  width: 100%;
+  height: 48px;
+  background: #7494ec;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgb(0,0,0,0.1);
+  cursor: pointer;
+  font-size: 16px;
+  
+}
