--- a/style.css
+++ b/style.css
@@ -30,8 +30,13 @@ body{
   display: flex;
   text-align: center;
   align-items: center; 
-  background-color: seagreen;
+  /* background-color: seagreen; */
   color: #333;
+  padding: 40px;
+  z-index: 1;
+}
+.form-box.register{
+  visibility: hidden;
 }
 form{
 width: 100%;
@@ -88,5 +93,38 @@ text-decoration: none;
   box-shadow: 0 0 10px rgb(0,0,0,0.1);
   cursor: pointer;
   font-size: 16px;
-  
+  color: #fff;
+  font-weight: 600;
 }
+
+.container p{
+  font-size: 14.5px;
+  margin: 15px 0;
+}
+
+.social-icons a{
+  display: inline-flex;
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  font-size: 24px;
+  color: #333;
+  text-decoration: none;
+}
+.toggle-box{
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  display: flex;
+/* flex-direction: column; */
+justify-content: center;
+align-items: center;
+}
+
+/* .toggle-panel{
+position: absolute;
+width: 50%;
+height: 100%;
+background: seagreen;
+
+} */
